Format html code

--- a/landscapes.html
+++ b/landscapes.html
@@ -46,29 +46,29 @@
     <!--  1st row of landscape paintings -->
 
     <section class="clear">
-        <div class="container"> 
-        <div class="album clear">
-            <img src="assets/images/breakfast.jpg" alt="Picture of the table with served breakfast near the sea">
-            <h3>Breakfast at the sea</h3>
-            <p>Oil on canvas, size 50x50cm. 2021.</p>
+        <div class="container">
+            <div class="album clear">
+                <img src="assets/images/breakfast.jpg" alt="Picture of the table with served breakfast near the sea">
+                <h3>Breakfast at the sea</h3>
+                <p>Oil on canvas, size 50x50cm. 2021.</p>
 
-            <hr>
-        </div>
+                <hr>
+            </div>
 
-        <div class="album">
-            <img src="assets/images/poppy-dark.jpg" alt="Painting of red Poppies near the sea">
-            <h3>Poppies near the sea</h3>
-            <p>Oil on canvas, size 30x30cm. 2021.</p>
+            <div class="album">
+                <img src="assets/images/poppy-dark.jpg" alt="Painting of red Poppies near the sea">
+                <h3>Poppies near the sea</h3>
+                <p>Oil on canvas, size 30x30cm. 2021.</p>
 
-            <hr>
-        </div>
-        <div class="album">
-            <img src="assets/images/rocks.jpg" alt="Painting of Rocks and the blue sea">
-            <h3>Rocks</h3>
-            <p>Oil on laminate, size 18x19cm. 2021. By Tatyana Bukreeva's masterclass.</p>
+                <hr>
+            </div>
+            <div class="album">
+                <img src="assets/images/rocks.jpg" alt="Painting of Rocks and the blue sea">
+                <h3>Rocks</h3>
+                <p>Oil on laminate, size 18x19cm. 2021. By Tatyana Bukreeva's masterclass.</p>
 
-            <hr>
-        </div>
+                <hr>
+            </div>
         </div>
     </section><br>
 
@@ -78,28 +78,28 @@
         <p class="text-center">Three copies were painted by the friend's request and all three look a little different.
             Paintings were done by Olga Bazanova's masterclass in YouTube. </p>
 
-    <div class="container">
-        <div class="album">
-            <img src="assets/images/cap1.jpg" alt="Painting of Saint-Jean-Cap-Ferrat. 1st copy">
-            <h3>Saint-Jean-Cap-Ferrat-1</h3>
-            <p>Oil, canvas on cardboard, 30x40cm. 2020.</p>
-            <hr>
-        </div>
+        <div class="container">
+            <div class="album">
+                <img src="assets/images/cap1.jpg" alt="Painting of Saint-Jean-Cap-Ferrat. 1st copy">
+                <h3>Saint-Jean-Cap-Ferrat-1</h3>
+                <p>Oil, canvas on cardboard, 30x40cm. 2020.</p>
+                <hr>
+            </div>
 
-        <div class="album">
-            <img src="assets/images/cap2.jpg" alt="Painting of Saint-Jean-Cap-Ferrat. 2nd copy">
-            <h3>Saint-Jean-Cap-Ferrat-2</h3>
-            <p>Oil, canvas on cardboard, 30x40cm. 2020.</p>
-            <hr>
-        </div>
+            <div class="album">
+                <img src="assets/images/cap2.jpg" alt="Painting of Saint-Jean-Cap-Ferrat. 2nd copy">
+                <h3>Saint-Jean-Cap-Ferrat-2</h3>
+                <p>Oil, canvas on cardboard, 30x40cm. 2020.</p>
+                <hr>
+            </div>
 
-        <div class="album">
-            <img src="assets/images/cap3.jpg" alt="Painting of Saint-Jean-Cap-Ferrat. 3rd copy">
-            <h3>Saint-Jean-Cap-Ferrat-3</h3>
-            <p>Oil, canvas on cardboard, 30x40cm. 2020.</p>
-            <hr>
+            <div class="album">
+                <img src="assets/images/cap3.jpg" alt="Painting of Saint-Jean-Cap-Ferrat. 3rd copy">
+                <h3>Saint-Jean-Cap-Ferrat-3</h3>
+                <p>Oil, canvas on cardboard, 30x40cm. 2020.</p>
+                <hr>
+            </div>
         </div>
-    </div>
     </section>
 
     <!--Third row of landscape paintings -->
@@ -133,53 +133,54 @@
         </div>
     </section>
 
-    <section> 
-    <div class="container">    
-    <div class="album">
-        <img src="assets/images/moon-mice.jpg" alt="Funny picture where mice  fly on brooms to the Cheese Moon">
-        <h3>The Cheese Moon</h3>
-        <p>Oil on canvas, size 30x40cm. 2021.</p>
-        <hr>
-    </div>
+    <section>
+        <div class="container">
+            <div class="album">
+                <img src="assets/images/moon-mice.jpg" alt="Funny picture where mice  fly on brooms to the Cheese Moon">
+                <h3>The Cheese Moon</h3>
+                <p>Oil on canvas, size 30x40cm. 2021.</p>
+                <hr>
+            </div>
 
-    <div class="album">
-        <img src="assets/images/moon-mice2.jpg" alt="Fragment of painting The Cheese Moon.">
-        <h3>Fragment of The Cheese Moon</h3>
-        <p> Oil on canvas, size 30x40cm. 2021.</p>
-        <hr>
-    </div>
-    <div class="album">
-        <img src="assets/images/returning.jpg" alt="Grey kitty">
-        <h3>The Return</h3>
-        <p>Oil, canvas on cardboard, size 30x40cm. 1981.</p>
-        <hr>
-    </div>
-    </div>
+            <div class="album">
+                <img src="assets/images/moon-mice2.jpg" alt="Fragment of painting The Cheese Moon.">
+                <h3>Fragment of The Cheese Moon</h3>
+                <p> Oil on canvas, size 30x40cm. 2021.</p>
+                <hr>
+            </div>
+            <div class="album">
+                <img src="assets/images/returning.jpg" alt="Grey kitty">
+                <h3>The Return</h3>
+                <p>Oil, canvas on cardboard, size 30x40cm. 1981.</p>
+                <hr>
+            </div>
+        </div>
     </section><br>
 
     <!--4th row of landscape paintings -->
 
     <section>
-        <div class="container"> 
-        <div class="album">
-            <img src="assets/images/gurzuf.jpg" alt="Nice picture of the place called Gurzuf with the sea and mountain">
-            <h3>Gurzuf</h3>
-            <p>Oil, canvas on cardboard, size 10x15cm. 2021.</p>
-            <hr>
-        </div>
+        <div class="container">
+            <div class="album">
+                <img src="assets/images/gurzuf.jpg"
+                    alt="Nice picture of the place called Gurzuf with the sea and mountain">
+                <h3>Gurzuf</h3>
+                <p>Oil, canvas on cardboard, size 10x15cm. 2021.</p>
+                <hr>
+            </div>
 
-        <div class="album">
-            <img src="assets/images/lavender.jpg" alt="Lavender field and a country house">
-            <h3>The Lavender</h3>
-            <p>Oil, canvas on cardboard, size 10x15cm. 2021. By Katya Fedorova's masterclass. </p>
-            <hr>
-        </div>
-        <div class="album">
-            <img src="assets/images/eyeof-light.jpg" alt="Abstract painting of the sailboat in the sunset">
-            <h3>The Eye of Light</h3>
-            <p>Oil on canvas, size 25x35cm. 2022. By Olga Bazanova's masterclass.</p>
-            <hr>
-        </div>
+            <div class="album">
+                <img src="assets/images/lavender.jpg" alt="Lavender field and a country house">
+                <h3>The Lavender</h3>
+                <p>Oil, canvas on cardboard, size 10x15cm. 2021. By Katya Fedorova's masterclass. </p>
+                <hr>
+            </div>
+            <div class="album">
+                <img src="assets/images/eyeof-light.jpg" alt="Abstract painting of the sailboat in the sunset">
+                <h3>The Eye of Light</h3>
+                <p>Oil on canvas, size 25x35cm. 2022. By Olga Bazanova's masterclass.</p>
+                <hr>
+            </div>
         </div>
     </section><br>
 
@@ -187,25 +188,25 @@
 
     <section>
         <div class="container">
-        <div class="album">
-            <img src="assets/images/yaht.jpg" alt="Yaht at dawn, the calm sea">
-            <h3>The Yaht at Dawn</h3>
-            <p>Oil on canvas, size 40x50cm. 2021. By Olga Bazanova's masterclass.</p>
-            <hr>
-        </div>
+            <div class="album">
+                <img src="assets/images/yaht.jpg" alt="Yaht at dawn, the calm sea">
+                <h3>The Yaht at Dawn</h3>
+                <p>Oil on canvas, size 40x50cm. 2021. By Olga Bazanova's masterclass.</p>
+                <hr>
+            </div>
 
-        <div class="album">
-            <img src="assets/images/domik.jpg" alt="A small house in the middle of the lake">
-            <h3> A Little House</h3>
-            <p>Oil on canvas, size 20x30cm. 2020. By Olga Bazanova's masterclass.</p>
-            <hr>
-        </div>
-        <div class="album">
-            <img src="assets/images/sail.jpg" alt="A sailboat at dawn">
-            <h3>The Sail</h3>
-            <p>Oil, canvas on cardboard, size 10x15cm. 2021. By Olga Bazanova's masterclass.</p>
-            <hr>
-        </div>
+            <div class="album">
+                <img src="assets/images/domik.jpg" alt="A small house in the middle of the lake">
+                <h3> A Little House</h3>
+                <p>Oil on canvas, size 20x30cm. 2020. By Olga Bazanova's masterclass.</p>
+                <hr>
+            </div>
+            <div class="album">
+                <img src="assets/images/sail.jpg" alt="A sailboat at dawn">
+                <h3>The Sail</h3>
+                <p>Oil, canvas on cardboard, size 10x15cm. 2021. By Olga Bazanova's masterclass.</p>
+                <hr>
+            </div>
         </div>
     </section><br>
 
@@ -213,27 +214,27 @@
 
     <section>
         <div class="container">
-        <div class="album">
-            <img src="assets/images/montenegro.jpg" alt="Montenegro, Igalo bay painting">
-            <h3>Montenegro</h3>
-            <p>Oil on canvas, size 50x70cm. 2021. Copy of Phil Martin's picture.</p>
+            <div class="album">
+                <img src="assets/images/montenegro.jpg" alt="Montenegro, Igalo bay painting">
+                <h3>Montenegro</h3>
+                <p>Oil on canvas, size 50x70cm. 2021. Copy of Phil Martin's picture.</p>
 
-            <hr>
-        </div>
+                <hr>
+            </div>
 
-        <div class="album">
-            <img src="assets/images/poppy-sunset.jpg" alt="Poppies at sunset near the sea">
-            <h3>Poppies at sunset</h3>
-            <p>Oil, canvas on cardboard, size 30x40cm. 2021. By Olga Bazanova's masterclass.</p>
-            <hr>
-        </div>
+            <div class="album">
+                <img src="assets/images/poppy-sunset.jpg" alt="Poppies at sunset near the sea">
+                <h3>Poppies at sunset</h3>
+                <p>Oil, canvas on cardboard, size 30x40cm. 2021. By Olga Bazanova's masterclass.</p>
+                <hr>
+            </div>
 
-        <div class="album">
-            <img src="assets/images/wave.jpg" alt="Sunlight wave in the blue sea ">
-            <h3>Wave</h3>
-            <p>Oil on canvas, size 40x50cm. 2008. By Vladimir Grinev's masterclass.</p>
-            <hr>
-        </div>
+            <div class="album">
+                <img src="assets/images/wave.jpg" alt="Sunlight wave in the blue sea ">
+                <h3>Wave</h3>
+                <p>Oil on canvas, size 40x50cm. 2008. By Vladimir Grinev's masterclass.</p>
+                <hr>
+            </div>
         </div>
     </section><br>
 
@@ -241,26 +242,28 @@
 
     <section>
         <div class="container">
-        <div class="album">
-            <img src="assets/images/igalo.jpg" alt="Montenegro, The Igalo Bay">
-            <h3>The Igalo Bay. Montenegro</h3>
-            <p>Oil on canvas, size 30x40cm. 2009. Copy of Phil Martin's picture.</p>
-            <hr>
-        </div>
+            <div class="album">
+                <img src="assets/images/igalo.jpg" alt="Montenegro, The Igalo Bay">
+                <h3>The Igalo Bay. Montenegro</h3>
+                <p>Oil on canvas, size 30x40cm. 2009. Copy of Phil Martin's picture.</p>
+                <hr>
+            </div>
 
-        <div class="album">
-            <img src="assets/images/kinkade-big.jpg" alt="A little house in the forest by Thomas Kinkade">
-            <h3>A little house in the forest </h3>
-            <p>Oil paint on canvas, size 35x45cm. 2021.Copy of Thomas Kinkade's picture. By Olga Bazanova's masterclass.</p>
-            <hr>
-        </div>
+            <div class="album">
+                <img src="assets/images/kinkade-big.jpg" alt="A little house in the forest by Thomas Kinkade">
+                <h3>A little house in the forest </h3>
+                <p>Oil paint on canvas, size 35x45cm. 2021.Copy of Thomas Kinkade's picture. By Olga Bazanova's
+                    masterclass.</p>
+                <hr>
+            </div>
 
-        <div class="album">
-            <img src=" assets/images/kinkade-jr.jpg" alt="A little house in the forest by Thomas Kinkade">
-            <h3>A little house in the forest </h3>
-            <p>Oil paint on canvas, size 20x30cm. 2021.Copy of Thomas Kinkade's picture. By Olga Bazanova's masterclass.</p>
-            <hr>
-        </div>
+            <div class="album">
+                <img src=" assets/images/kinkade-jr.jpg" alt="A little house in the forest by Thomas Kinkade">
+                <h3>A little house in the forest </h3>
+                <p>Oil paint on canvas, size 20x30cm. 2021.Copy of Thomas Kinkade's picture. By Olga Bazanova's
+                    masterclass.</p>
+                <hr>
+            </div>
         </div>
     </section><br>
 
@@ -268,46 +271,51 @@
 
     <section>
         <div class="container">
-        <div class="album">
-            <img src="assets/images/fujiyama.jpg" alt="Fujiyama picture">
-            <h3>Fujiyama</h3>
-            <p>Oil and acrilic putty on glass, size 26x44cm. 1984.</p>
-            <hr>
-        </div>
+            <div class="album">
+                <img src="assets/images/fujiyama.jpg" alt="Fujiyama picture">
+                <h3>Fujiyama</h3>
+                <p>Oil and acrilic putty on glass, size 26x44cm. 1984.</p>
+                <hr>
+            </div>
 
-        <div class="album">
-            <img src="assets/images/bear-mountain.png" alt="The Bear Mountain">
-            <h3> The Bear Mountain</h3>
-            <p>Oil, canvas on cardboard, size 10x15cm. 2021.</p>
-            <hr>
-        </div>
+            <div class="album">
+                <img src="assets/images/bear-mountain.png" alt="The Bear Mountain">
+                <h3> The Bear Mountain</h3>
+                <p>Oil, canvas on cardboard, size 10x15cm. 2021.</p>
+                <hr>
+            </div>
 
-        <div class="album">
-            <img src="assets/images/cliff.jpg" alt="The Cliff and the sea">
-            <h3> The Cliff</h3>
-            <p>Oil, canvas on cardboard, size 10x15cm. 2021. </p>
-            <hr>
-        </div>
+            <div class="album">
+                <img src="assets/images/cliff.jpg" alt="The Cliff and the sea">
+                <h3> The Cliff</h3>
+                <p>Oil, canvas on cardboard, size 10x15cm. 2021. </p>
+                <hr>
+            </div>
         </div>
     </section><br>
 
-<div class="text-center">
-    <p>That is all so far. 😉 </p><br>
+    <div class="text-center">
+        <p>That is all so far. 😉 </p><br>
 
-    <a href="landscapes.html" aria-label="Go to the top of the page Landscapes Album"> Back to the Top of the page ⬆️</a>
-</div>
+        <a href="landscapes.html" aria-label="Go to the top of the page Landscapes Album"> Back to the Top of the page
+            ⬆️</a>
+    </div>
     <!--  Footer the same as on the main page -->
 
-   
-       
- <footer class="clear contacts" id="footer">
-    <div class="text-center">
-        Contact us on  &nbsp;&nbsp; <i class="fa-brands fa-instagram"></i>&nbsp;<a href="https://instagram.com/juniva.art" target="_blank" rel="noopener" aria-label="Visit Juniva's page on Instagram (opens in new tab)">Instagram</a> &nbsp;&nbsp;
-         <i class="fa-brands fa-twitter"></i>&nbsp;<a href="https://twitter.com/" target="_blank" rel="noopener" aria-label="Go to Twitter (opens in new tab)">Twitter</a> &nbsp;&nbsp;
-         <i class="fa-brands fa-facebook"></i>&nbsp;<a href="https://facebook.com/" target="_blank" rel="noopener" aria-label="Go to Facebook (opens in new tab)">Facebook</a><br><br>
-        Copyright  &copy; Juniva 1981-2022.
-    </div>
-</footer>
+
+
+    <footer class="clear contacts" id="footer">
+        <div class="text-center">
+            Contact us on &nbsp;&nbsp; <i class="fa-brands fa-instagram"></i>&nbsp;<a
+                href="https://instagram.com/juniva.art" target="_blank" rel="noopener"
+                aria-label="Visit Juniva's page on Instagram (opens in new tab)">Instagram</a> &nbsp;&nbsp;
+            <i class="fa-brands fa-twitter"></i>&nbsp;<a href="https://twitter.com/" target="_blank" rel="noopener"
+                aria-label="Go to Twitter (opens in new tab)">Twitter</a> &nbsp;&nbsp;
+            <i class="fa-brands fa-facebook"></i>&nbsp;<a href="https://facebook.com/" target="_blank" rel="noopener"
+                aria-label="Go to Facebook (opens in new tab)">Facebook</a><br><br>
+            Copyright &copy; Juniva 1981-2022.
+        </div>
+    </footer>
 
     <!--  Fontawesome script  -->
 
