--- a/flowers.html
+++ b/flowers.html
@@ -30,7 +30,7 @@
                     <a href="animals.html" aria-label="Go to paintings with animals">Animals</a>
                 </li>
                 <li>
-                    <a href="landscapes.html"  aria-label="Go to paintings with landscapes">Landscapes</a>
+                    <a href="landscapes.html" aria-label="Go to paintings with landscapes">Landscapes</a>
                 </li>
 
                 <li>
@@ -47,101 +47,106 @@
 
     <section class="clear">
         <div class="container">
-        <div class="album">
-            <img src="assets/images/summer-midday.jpg" alt="A Bunch of pink flowers on the window sill with a view to summer landscape">
-            <h3>The summer midday</h3>
-            <p>Oil, canvas on cardboard, size 30x40cm. 2022.</p>
+            <div class="album">
+                <img src="assets/images/summer-midday.jpg"
+                    alt="A Bunch of pink flowers on the window sill with a view to summer landscape">
+                <h3>The summer midday</h3>
+                <p>Oil, canvas on cardboard, size 30x40cm. 2022.</p>
 
-            <hr>
-        </div>
+                <hr>
+            </div>
 
-        <div class="album">
-            <img src="assets/images/rozes.jpg" alt="Juniva at her picture with roses">
-            <h3>Juniva at her picture with roses. Roses. </h3>
-            <p>Oil on canvas, size 40x50cm. 2008. By Vladimir Grinev's masterclass.</p>
+            <div class="album">
+                <img src="assets/images/rozes.jpg" alt="Juniva at her picture with roses">
+                <h3>Juniva at her picture with roses. Roses. </h3>
+                <p>Oil on canvas, size 40x50cm. 2008. By Vladimir Grinev's masterclass.</p>
 
-            <hr>
+                <hr>
+            </div>
+            <div class="album">
+                <img src="assets/images/poppy-sunset.jpg" alt="Poppies at sunset near the sea">
+                <h3>Poppies at sunset</h3>
+                <p>Oil, canvas on cardboard, size 30x40cm. 2021. By Olga Bazanova's masterclass.</p>
+                <hr>
+            </div>
         </div>
-        <div class="album">
-            <img src="assets/images/poppy-sunset.jpg" alt="Poppies at sunset near the sea">
-            <h3>Poppies at sunset</h3>
-            <p>Oil, canvas on cardboard, size 30x40cm. 2021.  By Olga Bazanova's masterclass.</p>
-            <hr>
-        </div>
-    </div>
     </section><br>
 
     <!-- Second row of flowers paintings -->
 
     <section>
         <div class="container">
-        <div class="album">
-            <img src="assets/images/buket.jpg" alt="A Bunch of field flowers, a book and apricots">
-            <h3>The summer bouquet</h3>
-            <p>Oil, canvas on cardboard, 35x45cm. 2020. By Olga Bazanova's masterclass.</p>
-            <hr>
-        </div>
+            <div class="album">
+                <img src="assets/images/buket.jpg" alt="A Bunch of field flowers, a book and apricots">
+                <h3>The summer bouquet</h3>
+                <p>Oil, canvas on cardboard, 35x45cm. 2020. By Olga Bazanova's masterclass.</p>
+                <hr>
+            </div>
 
-        <div class="album">
-            <img src="assets/images/magnolia.jpg" alt="Three pink magnolia flowers on the tree">
-            <h3>Magnolia</h3>
-            <p>Oil on canvas, 20x30cm. 2021.</p>
-            <hr>
-        </div>
+            <div class="album">
+                <img src="assets/images/magnolia.jpg" alt="Three pink magnolia flowers on the tree">
+                <h3>Magnolia</h3>
+                <p>Oil on canvas, 20x30cm. 2021.</p>
+                <hr>
+            </div>
 
-        <div class="album">
-            <img src="assets/images/poppy-lite.jpg" alt="Poppies near the blue sea">
-            <h3>Poppies</h3>
-            <p>Oil on canvas, 30x30cm. 2021.</p>
-            <hr>
+            <div class="album">
+                <img src="assets/images/poppy-lite.jpg" alt="Poppies near the blue sea">
+                <h3>Poppies</h3>
+                <p>Oil on canvas, 30x30cm. 2021.</p>
+                <hr>
+            </div>
         </div>
-    </div>
     </section>
 
     <!--Third row of flowers paintings -->
 
 
-    <section> 
+    <section>
         <div class="container">
-        <div class="album">
-            <img src="assets/images/basket-lavender.jpg" alt="The basket with lavender">
-            <h3>The basket with lavender.</h3>
-            <p>Oil, canvas on cardboard, 10x15cm. 2021. By Vugar Mamedov's masterclass.  </p>
-            <hr>
+            <div class="album">
+                <img src="assets/images/basket-lavender.jpg" alt="The basket with lavender">
+                <h3>The basket with lavender.</h3>
+                <p>Oil, canvas on cardboard, 10x15cm. 2021. By Vugar Mamedov's masterclass. </p>
+                <hr>
+            </div>
+
+            <div class="album">
+                <img src="assets/images/crocus.jpg" alt="The crocus. A very nice picture in blue colors">
+                <h3>The crocus</h3>
+                <p> Oil on canvas, size 30x40cm. 2021. By Alexandr Maranov's masterclass.</p>
+                <hr>
+            </div>
+            <div class="album">
+                <img src="assets/images/daffodil.jpg" alt="Daffodils in the glass vase">
+                <h3>Daffodils</h3>
+                <p>Oil, canvas on cardboard, size 25x30cm. 2022.</p>
+                <hr>
+            </div>
         </div>
-
-    <div class="album">
-        <img src="assets/images/crocus.jpg" alt="The crocus. A very nice picture in blue colors">
-        <h3>The crocus</h3>
-        <p> Oil on canvas, size 30x40cm. 2021. By Alexandr Maranov's masterclass.</p>
-        <hr>
-    </div>
-    <div class="album">
-        <img src="assets/images/daffodil.jpg" alt="Daffodils in the glass vase">
-        <h3>Daffodils</h3>
-        <p>Oil, canvas on cardboard, size 25x30cm. 2022.</p>
-        <hr>
-    </div>
-    </div>
     </section><br>
-    
-<div class="text-center">
-    <p>That is all so far. 😉 </p><br>
 
-    <a href="flowers.html" aria-label="Go to the top of the page Flowers Album"> Back to the Top of the page ⬆️</a>
-</div>
-
- <!--  Footer the same as on the main page -->
-
-    
- <footer class="clear contacts" id="footer">
     <div class="text-center">
-        Contact us on  &nbsp;&nbsp; <i class="fa-brands fa-instagram"></i>&nbsp;<a href="https://instagram.com/juniva.art" target="_blank" rel="noopener" aria-label="Visit Juniva's page on Instagram (opens in new tab)">Instagram</a> &nbsp;&nbsp;
-         <i class="fa-brands fa-twitter"></i>&nbsp;<a href="https://twitter.com/" target="_blank" rel="noopener" aria-label="Go to Twitter (opens in new tab)">Twitter</a> &nbsp;&nbsp;
-         <i class="fa-brands fa-facebook"></i>&nbsp;<a href="https://facebook.com/" target="_blank" rel="noopener" aria-label="Go to Facebook (opens in new tab)">Facebook</a><br><br>
-        Copyright  &copy; Juniva 1981-2022.
+        <p>That is all so far. 😉 </p><br>
+
+        <a href="flowers.html" aria-label="Go to the top of the page Flowers Album"> Back to the Top of the page ⬆️</a>
     </div>
-</footer>
+
+    <!--  Footer the same as on the main page -->
+
+
+    <footer class="clear contacts" id="footer">
+        <div class="text-center">
+            Contact us on &nbsp;&nbsp; <i class="fa-brands fa-instagram"></i>&nbsp;<a
+                href="https://instagram.com/juniva.art" target="_blank" rel="noopener"
+                aria-label="Visit Juniva's page on Instagram (opens in new tab)">Instagram</a> &nbsp;&nbsp;
+            <i class="fa-brands fa-twitter"></i>&nbsp;<a href="https://twitter.com/" target="_blank" rel="noopener"
+                aria-label="Go to Twitter (opens in new tab)">Twitter</a> &nbsp;&nbsp;
+            <i class="fa-brands fa-facebook"></i>&nbsp;<a href="https://facebook.com/" target="_blank" rel="noopener"
+                aria-label="Go to Facebook (opens in new tab)">Facebook</a><br><br>
+            Copyright &copy; Juniva 1981-2022.
+        </div>
+    </footer>
 
     <!--  Fontawesome script  -->
 
@@ -149,4 +154,3 @@
 </body>
 
 </html>
- 
