Wrap navbar on all pages in flex-container

--- a/animals.html
+++ b/animals.html
@@ -22,24 +22,25 @@
         </div>
 
         <nav>
-            <ul id="menu">
-                <li>
-                    <a href="index.html" aria-label="Go to main page">Home</a>
-                </li>
-                <li>
-                    <a href="animals.html" class="active" aria-label="Go to paintings with animals">Animals</a>
-                </li>
-                <li>
-                    <a href="landscapes.html" aria-label="Go to paintings with landscapes">Landscapes</a>
-                </li>
+            <div id="menu" class="flex-container">
 
-                <li>
+                <div>
+                    <a href="index.html" class="active" aria-label="Go to main page">Home</a>
+                </div>
+                <div>
+                    <a href="animals.html" aria-label="Go to paintings with animals">Animals</a>
+                </div>
+                <div>
+                    <a href="landscapes.html" aria-label="Go to paintings with landscapes">Landscapes</a>
+                </div>
+
+                <div>
                     <a href="flowers.html" aria-label="Go to paintings with flowers">Flowers</a>
-                </li>
-                <li>
-                    <a href="#footer" aria-label="Contact us">Contacts</a>
-                </li>
-            </ul>
+                </div>
+                <div>
+                    <a href="#footer" aria-label="Go to Contact us section">Contacts</a>
+                </div>
+            </div>
         </nav>
     </header>
 
