--- a/index.html
+++ b/index.html
@@ -20,24 +20,25 @@
             <h2 id="motto">Sweet pictures to feast your eyes :)</h2>
         </div>
         <nav>
-            <ul id="menu">
-                <li>
-                    <a href="index.html" class="active" aria-label="Go to main page">Home</a>
-                </li>
-                <li>
-                    <a href="animals.html" aria-label="Go to paintings with animals">Animals</a>
-                </li>
-                <li>
-                    <a href="landscapes.html" aria-label="Go to paintings with landscapes">Landscapes</a>
-                </li>
+            <div id="menu" class="flex-container">
 
-                <li>
+                <div>
+                    <a href="index.html" class="active" aria-label="Go to main page">Home</a>
+                </div>
+                <div>
+                    <a href="animals.html" aria-label="Go to paintings with animals">Animals</a>
+                </div>
+                <div>
+                    <a href="landscapes.html" aria-label="Go to paintings with landscapes">Landscapes</a>
+                </div>
+
+                <div>
                     <a href="flowers.html" aria-label="Go to paintings with flowers">Flowers</a>
-                </li>
-                <li>
-                    <a href="#footer" aria-label="Contact us">Contacts</a>
-                </li>
-            </ul>
+                </div>
+                <div>
+                    <a href="#footer" aria-label="Go to Contact us section">Contacts</a>
+                </div>
+            </div>
         </nav>
     </header>
 
@@ -46,16 +47,17 @@
     <section>
         <h2 class="site-idea text-center ">Everyone can dance and draw...<br>
             ...however, with varying degrees of skill. 😀<br></h2>
-        <div class="row">
-            <div class="column column-left">
+
+        <div class="flex-container-text">
+            <div class="flex-item-left text-center">
                 <p>
-                    This site presents the artistic creativity of a simple Ukrainian woman and her
+                    This site presents the art of a simple Ukrainian woman and her
                     concept of beauty as
                     she sees it. </p><br>
 
                 <p> Julia Nikolaevna Vasilenko took her creative pseudonym Juniva - according to the first couple of
                     letters of her full name. Juniva is self-taught, she took master
-                    classes from various artists, but she does not have a systematic art education. He paints only by
+                    classes from various artists, but she does not have a systematic art education. She paints only by
                     inspiration, in a good mood, and believes
                     that this state is transmitted to the audience.</p> <br>
 
@@ -66,21 +68,21 @@
                     gouache.
                 </p>
             </div>
-            <div class="column column-right">
-
+            <div class="flex-item-right text-center">
                 <p> Definitely, cats and especially the
                     expression of their eyes is what inspires the artist to create and causes approval from her
                     friends.</p><br>
 
-                <p> Juniva's creative research has several time periods. The first period of active
-                    creativity fell on 1982-1985, and the last one began
-                    a couple of years ago, in 2020. In the interim, only a few paintings were painted.</p><br>
+                <p> Juniva's creative search has several periods of time. The first period of active creativity
+                    fell on 1981-1985, and the last one began a couple of years ago, in 2020. In the interval between
+                    these periods, only a few paintings were painted.</p><br>
 
                 <p> The following are three thematic albums - animals, landscapes and flowers. We
                     suggest clicking on
                     the album cover or the link below
                     it to view the pictures. We hope they will leave you with only pleasant impressions. </p>
             </div>
+        </div>
         </div>
     </section>
 
@@ -122,8 +124,8 @@
 
     <section class="clear">
         <h2 class="text-center site-idea">Follow masters.<br>
-            Do better than they do! 😀👌<br></h2>
-        <div class="row">
+            Do better than they do! 😀👌 </h2>
+        <!--   <div class="row">
             <div class="column column-left">
                 <p>
                     Thanks to the Internet and YouTube, any training has become accessible. When a good artist gives
@@ -137,6 +139,29 @@
 
             <div class="column column-right">
 
+                <p> Below are links to YouTube videos of master classes by excellent artists, according to which some of
+                    Juniva's
+                    paintings were painted. You can turn on
+                    captions translated into your native language in the video settings. To do this, click on the gear
+                    at the bottom of the video that
+                    stands for Settings, select Subtitles > Translate > and select your language. Enjoy!
+                </p>
+            </div>
+        </div> -->
+
+        <div class="flex-container-text">
+            <div class="flex-item-left text-center">
+                <p>
+                    Thanks to the Internet and YouTube, any training has become accessible. When a good artist gives
+                    tutorials and shows you how
+                    to paint a picture step by step, it's very easy to follow. You may not be able to draw as fast as a
+                    professional artist, but
+                    the main thing is the result, and it will definitely turn out good, and most importantly, a lot of
+                    fun from the creative process itself!
+                </p>
+            </div>
+
+            <div class="flex-item-right text-center">
                 <p> Below are links to YouTube videos of master classes by excellent artists, according to which some of
                     Juniva's
                     paintings were painted. You can turn on
