Tidy up css code after changes with flexbox

--- a/animals.html
+++ b/animals.html
@@ -25,10 +25,10 @@
             <div id="menu" class="flex-container">
 
                 <div>
-                    <a href="index.html" class="active" aria-label="Go to main page">Home</a>
+                    <a href="index.html" aria-label="Go to main page">Home</a>
                 </div>
                 <div>
-                    <a href="animals.html" aria-label="Go to paintings with animals">Animals</a>
+                    <a href="animals.html" class="active" aria-label="Go to paintings with animals">Animals</a>
                 </div>
                 <div>
                     <a href="landscapes.html" aria-label="Go to paintings with landscapes">Landscapes</a>
