--- a/flowers.html
+++ b/flowers.html
@@ -25,7 +25,7 @@
             <div id="menu" class="flex-container">
 
                 <div>
-                    <a href="index.html" class="active" aria-label="Go to main page">Home</a>
+                    <a href="index.html" aria-label="Go to main page">Home</a>
                 </div>
                 <div>
                     <a href="animals.html" aria-label="Go to paintings with animals">Animals</a>
@@ -35,7 +35,7 @@
                 </div>
 
                 <div>
-                    <a href="flowers.html" aria-label="Go to paintings with flowers">Flowers</a>
+                    <a href="flowers.html" class="active" aria-label="Go to paintings with flowers">Flowers</a>
                 </div>
                 <div>
                     <a href="#footer" aria-label="Go to Contact us section">Contacts</a>
