--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             ...however, with varying degrees of skill. 😀<br></h2>
 
         <div class="flex-container-text">
-            <div class="flex-item-left text-center">
+            <div class="flex-item-left text-justify">
                 <p>
                     This site presents the art of a simple Ukrainian woman and her
                     concept of beauty as
@@ -68,7 +68,7 @@
                     gouache.
                 </p>
             </div>
-            <div class="flex-item-right text-center">
+            <div class="flex-item-right text-justify">
                 <p> Definitely, cats and especially the
                     expression of their eyes is what inspires the artist to create and causes approval from her
                     friends.</p><br>
@@ -150,7 +150,7 @@
         </div> -->
 
         <div class="flex-container-text">
-            <div class="flex-item-left text-center">
+            <div class="flex-item-left text-justify">
                 <p>
                     Thanks to the Internet and YouTube, any training has become accessible. When a good artist gives
                     tutorials and shows you how
