--- a/landscapes.html
+++ b/landscapes.html
@@ -25,13 +25,13 @@
             <div id="menu" class="flex-container">
 
                 <div>
-                    <a href="index.html" class="active" aria-label="Go to main page">Home</a>
+                    <a href="index.html" aria-label="Go to main page">Home</a>
                 </div>
                 <div>
                     <a href="animals.html" aria-label="Go to paintings with animals">Animals</a>
                 </div>
                 <div>
-                    <a href="landscapes.html" aria-label="Go to paintings with landscapes">Landscapes</a>
+                    <a href="landscapes.html" class="active" aria-label="Go to paintings with landscapes">Landscapes</a>
                 </div>
 
                 <div>
@@ -107,10 +107,39 @@
 
     <section>
         <h2 class="site-idea text-center">If you only knew where inspiration comes from...</h2>
-        <div class="row">
-            <div class="column column-left">
+
+
+        <div class="flex-container-text">
+            <div class="flex-item-left text-justify">
                 <p>
                     Moonlit Night on the Dnieper by Arkhip Kuindzhi (1880) astonished his contemporaries. The moonlight
+                    streaming from the canvas
+                    seemed so real that some of the viewers tried to look behind the picture to find a lantern or lamp
+                    there.
+                    But there was no lamp. And the colors were the most ordinary, not fluorescent. Just an extraordinary
+                    talent of the artist.
+                    Juniva was also inspired by this masterpiece, and perhaps also by the story of Harry Potter. Thus
+                    was born this comic picture,
+                    where mice fly
+                </p> <br><br>
+            </div>
+
+            <div class="flex-item-right">
+                <p>  on brooms to the Cheese Moon. And we can only guess about their intentions.😁 <br><br>
+
+                    The painting The Return is a copy of a painting by a Soviet artist, published in 1981 on the back
+                    cover of the
+                    Yunost magazine. This story impressed the young Juniva and she painted this picture in a larger
+                    format. Clumsily,
+                    childishly she tried to convey the feelings of the astronauts who returned to their native Earth
+                    after a long flight into space. </p>
+            </div>
+        </div>
+
+        <!--      <div class="row">
+            <div class="column column-left">
+             <p>
+                      Moonlit Night on the Dnieper by Arkhip Kuindzhi (1880) astonished his contemporaries. The moonlight
                     streaming from the canvas
                     seemed so real that some of the viewers tried to look behind the picture to find a lantern or lamp
                     there.
@@ -131,7 +160,7 @@
                     childishly she tried to convey the feelings of the astronauts who returned to their native Earth
                     after a long flight into space. </p>
             </div>
-        </div>
+        </div>-->
     </section>
 
     <section>
