Delete commented-out code

--- a/index.html
+++ b/index.html
@@ -118,36 +118,13 @@
                 </span>
             </div>
         </div>
-    </section>
+    </section><br>
 
     <!--  2nd section of text on main page -->
 
     <section class="clear">
         <h2 class="text-center site-idea">Follow masters.<br>
             Do better than they do! 😀👌 </h2>
-        <!--   <div class="row">
-            <div class="column column-left">
-                <p>
-                    Thanks to the Internet and YouTube, any training has become accessible. When a good artist gives
-                    tutorials and shows you how
-                    to paint a picture step by step, it's very easy to follow. You may not be able to draw as fast as a
-                    professional artist, but
-                    the main thing is the result, and it will definitely turn out good, and most importantly, a lot of
-                    fun from the creative process itself!
-                </p>
-            </div>
-
-            <div class="column column-right">
-
-                <p> Below are links to YouTube videos of master classes by excellent artists, according to which some of
-                    Juniva's
-                    paintings were painted. You can turn on
-                    captions translated into your native language in the video settings. To do this, click on the gear
-                    at the bottom of the video that
-                    stands for Settings, select Subtitles > Translate > and select your language. Enjoy!
-                </p>
-            </div>
-        </div> -->
 
         <div class="flex-container-text">
             <div class="flex-item-left text-justify">
@@ -161,7 +138,7 @@
                 </p>
             </div>
 
-            <div class="flex-item-right text-center">
+            <div class="flex-item-right text-justify">
                 <p> Below are links to YouTube videos of master classes by excellent artists, according to which some of
                     Juniva's
                     paintings were painted. You can turn on
