Changes to README.md

--- a/index.html
+++ b/index.html
@@ -45,9 +45,10 @@
     <!--  1st section of text on main page -->
 
     <section>
-        <h2 class="site-idea text-center ">Everyone can dance and draw...<br>
+        <h2 class="site-idea text-center">Everyone can dance and draw...<br>
             ...however, with varying degrees of skill. 😀<br></h2>
 
+            <!--  The Flex-container idea was taken from the site https://www.w3schools.com/ -->
         <div class="flex-container-text">
             <div class="flex-item-left text-justify">
                 <p>
@@ -124,7 +125,7 @@
     <section class="clear">
         <h2 class="text-center site-idea">Follow masters.<br>
             Do better than they do! 😀👌 </h2>
-
+  <!--  The Flex-container idea was taken from the site https://www.w3schools.com/ -->
         <div class="flex-container-text">
             <div class="flex-item-left text-justify">
                 <p>
