--- a/landscapes.html
+++ b/landscapes.html
@@ -101,14 +101,14 @@
                 <hr>
             </div>
         </div>
-    </section>
+    </section><br>
 
     <!--Third row of landscape paintings -->
 
     <section>
         <h2 class="site-idea text-center">If you only knew where inspiration comes from...</h2>
 
-
+  <!--  The Flex-container idea was taken from the site https://www.w3schools.com/ -->
         <div class="flex-container-text">
             <div class="flex-item-left text-justify">
                 <p>
