Change id to class in all pages

--- a/flowers.html
+++ b/flowers.html
@@ -16,13 +16,13 @@
 <body>
     <header>
 
-        <div id="logo-bg">
-            <h1 id="logo">Flowers Album</h1>
-            <h2 id="motto">Sweet pictures to feast your eyes :)</h2>
+        <div class="logo-bg">
+            <h1 class="logo">Flowers Album</h1>
+            <h2 class="motto">Sweet pictures to feast your eyes :)</h2>
         </div>
 
         <nav>
-            <div id="menu" class="flex-container">
+            <div class="menu" class="flex-container">
 
                 <div>
                     <a href="index.html" aria-label="Go to main page">Home</a>
