--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 
 <body>
     <header>
-        <div id="logo-bg">
-            <h1 id="logo">Our Tiny Gallery</h1>
-            <h2 id="motto">Sweet pictures to feast your eyes :)</h2>
+        <div class="logo-bg">
+            <h1 class="logo">Our Tiny Gallery</h1>
+            <h2 class="motto">Sweet pictures to feast your eyes :)</h2>
         </div>
         <nav>
-            <div id="menu" class="flex-container">
+            <div class="menu" class="flex-container">
 
                 <div>
                     <a href="index.html" class="active" aria-label="Go to main page">Home</a>
