Add input required property and style for small screens

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h2 class="motto">Sweet pictures to feast your eyes :)</h2>
         </div>
         <nav>
-            <div class="menu" class="flex-container">
+            <div class="menu flex-container">
 
                 <div>
                     <a href="index.html" class="active" aria-label="Go to main page">Home</a>
@@ -193,16 +193,16 @@
         <form action="https://formdump.codeinstitute.net" method="POST">
 
             <label for="fname">First name:</label>
-            <input type="text" id="fname" name="fname"><br><br>
+            <input type="text" id="fname" name="fname" required><br><br>
 
             <label for="lname">Last name:</label>
-            <input type="text" id="lname" name="lname"><br><br>
+            <input type="text" id="lname" name="lname" required><br><br>
 
             <label for="email">E-mail:</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <input type="email" id="email" name="email"> <br><br>
+            <input type="email" id="email" name="email" required> <br><br>
 
             <label for="feedback">Please write your impressions:</label> <br>
-            <textarea id="feedback" name="feedback" rows="4" cols="50"> </textarea>
+            <textarea id="feedback" name="feedback" rows="4" cols="50" required></textarea>
             <br>
             <input class="button" type="submit" value="Submit">&nbsp; &nbsp;<input class="button" type="reset"
                 value="Clear form">
