--- a/landscapes.html
+++ b/landscapes.html
@@ -22,7 +22,7 @@
         </div>
 
         <nav>
-            <div class="menu" class="flex-container">
+            <div class="menu  flex-container">
 
                 <div>
                     <a href="index.html" aria-label="Go to main page">Home</a>
